# lir

./: .buildinfo  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE.txt  README.md  api-overview.html  experiment-setup.html  genindex.html  glass copy.yaml  guides.html  index.html  lir.schema.json  lr_calculation.html  lrsystem-assessment.html  lrsystem_yaml.html  mkdocs.py  mkdocs.yml  my_cool_ml_model.py  objects.inv  practitioners_guide_glass.ipynb  pre-commit.example  py-modindex.html  pyproject.toml  reference.html  run.py  search.html  searchindex.js  setup.py  terminology.html
.github/: compare-benchmarks.py
.github/workflows/: check_test.yaml  docs.yaml  release.yaml
_modules/: index.html  lir.html
_modules/lir/: aggregation.html  bounding.html  data_strategies.html  main.html  metrics.html  persistence.html  plotting.html  registry.html  transform.html  util.html  visualization.html
_sources/: api-overview.rst.txt  experiment-setup.rst.txt  guides.rst.txt  index.rst.txt  lr_calculation.rst.txt  lrsystem-assessment.rst.txt  lrsystem_yaml.rst.txt  reference.rst.txt  terminology.rst.txt
_sources/api/: index.rst.txt  lir.aggregation.base.rst.txt  lir.aggregation.case_llr_csv.rst.txt  lir.aggregation.metrics_bars.rst.txt  lir.aggregation.metrics_csv.rst.txt  lir.aggregation.plot_each.rst.txt  lir.aggregation.rst.txt  lir.aggregation.subset.rst.txt  lir.algorithms.bayeserror.rst.txt  lir.algorithms.bootstraps.rst.txt  lir.algorithms.devpav.rst.txt  lir.algorithms.invariance_bounds.rst.txt  lir.algorithms.isotonic_regression.rst.txt  lir.algorithms.kde.rst.txt  lir.algorithms.llr_overestimation.rst.txt  lir.algorithms.logistic_regression.rst.txt  lir.algorithms.mcmc.rst.txt  lir.algorithms.percentile_rank.rst.txt  lir.algorithms.rst.txt  lir.bounding.rst.txt  lir.config.aggregation.rst.txt  lir.config.algorithms.rst.txt  lir.config.base.rst.txt  lir.config.data.rst.txt  lir.config.experiment_strategies.rst.txt  lir.config.lrsystem_architectures.rst.txt  lir.config.metrics.rst.txt  lir.config.rst.txt  lir.config.substitution.rst.txt  lir.config.transform.rst.txt  lir.config.util.rst.txt  lir.data.datasets.rst.txt  lir.data.io.rst.txt  lir.data.models.rst.txt  lir.data.rst.txt  lir.data_strategies.auto.rst.txt  lir.data_strategies.labels.rst.txt  lir.data_strategies.pairs.rst.txt  lir.data_strategies.predefined.rst.txt  lir.data_strategies.rst.txt  (+38 more)
api/: index.html  lir.aggregation.base.html  lir.aggregation.case_llr_csv.html  lir.aggregation.html  lir.aggregation.metrics_bars.html  lir.aggregation.metrics_csv.html  lir.aggregation.plot_each.html  lir.aggregation.subset.html  lir.algorithms.bayeserror.html  lir.algorithms.bootstraps.html  lir.algorithms.devpav.html  lir.algorithms.html  lir.algorithms.invariance_bounds.html  lir.algorithms.isotonic_regression.html  lir.algorithms.kde.html  lir.algorithms.llr_overestimation.html  lir.algorithms.logistic_regression.html  lir.algorithms.mcmc.html  lir.algorithms.percentile_rank.html  lir.bounding.html  lir.config.aggregation.html  lir.config.algorithms.html  lir.config.base.html  lir.config.data.html  lir.config.experiment_strategies.html  lir.config.html  lir.config.lrsystem_architectures.html  lir.config.metrics.html  lir.config.substitution.html  lir.config.transform.html  lir.config.util.html  lir.data.datasets.html  lir.data.html  lir.data.io.html  lir.data.models.html  lir.data_strategies.auto.html  lir.data_strategies.html  lir.data_strategies.labels.html  lir.data_strategies.pairs.html  lir.data_strategies.predefined.html  (+38 more)
api/lir/: lir.__main__.html  lir.aggregation.html  lir.algorithms.bayeserror.html  lir.algorithms.bootstraps.html  lir.algorithms.html  lir.algorithms.invariance_bounds.html  lir.algorithms.isotonic_regression.html  lir.algorithms.kde.html  lir.algorithms.llr_overestimation.html  lir.algorithms.logistic_regression.html  lir.algorithms.percentile_rank.html  lir.bounding.html  lir.config.aggregation.html  lir.config.base.html  lir.config.data.html  lir.config.experiment_strategies.html  lir.config.html  lir.config.lrsystem_architectures.html  lir.config.metrics.html  lir.config.substitution.html  lir.config.transform.html  lir.config.util.html  lir.data.data_strategies.html  lir.data.datasets.alcohol_breath_analyser.html  lir.data.datasets.feature_data_csv.html  lir.data.datasets.glass.html  lir.data.datasets.html  lir.data.datasets.synthesized_normal_binary.html  lir.data.datasets.synthesized_normal_multiclass.html  lir.data.html  lir.data.io.html  lir.data.models.html  lir.data_strategies.html  lir.datasets.alcohol_breath_analyser.html  lir.datasets.feature_data_csv.html  lir.datasets.glass.html  lir.datasets.html  lir.datasets.synthesized_normal_binary.html  lir.experiment.html  (+28 more)
configs/: lir.schema.json
docs/: api-overview.rst  conf.py  experiment-setup.rst  guides.rst  index.md  index.rst  lr_calculation.rst  lrsystem-assessment.rst  lrsystem_yaml.md  lrsystem_yaml.rst  reference.md  reference.rst
docs/api/: lir.rst  (+5 more)
examples/: bootstrap.yaml  common_source_evaluation.yaml  example_glass_data.csv  glass.yaml  mcmc_minimal.yaml  mcmc_minimal.yml  optuna.yaml  score-based-common-source.yaml  specific_source_evaluation.yaml
lir/: __init__.py  _plotting_new.py  aggregation.py  bounding.py  calibration.py  compat.py  data_strategies.py  experiment.py  main.py  optuna.py  persistence.py  registry.py  util.py  visualization.py
lr_calculation/: index.html
lrsystem_yaml/: index.html
search/: search_index.json
tests/: bench.py  conftest.py  test_4pl_model.py  test_aggregation.py  test_bootstrap.py  test_bounding.py  test_calibration.py  test_config.py  test_data_strategies.py  test_distance.py  test_ece.py  test_elub.py  test_examples_yaml.py  test_external_module.py  test_invariance_bounds.py  test_lr.py  test_lrsystem.py  test_main.py  test_metrics.py  test_notebook.py  test_pairing.py  test_persistence.py  test_plotting.py  test_registry.py  test_schema.py  test_substitution.py  test_synthesized_data.py  test_transformers.py  test_two_level_model.py  test_util.py
(+294 files in other folders)
