[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "lir"
description = "Package for optimising and evaluating Likelihood Ratio (LR) systems."
dynamic = ["version"]
authors = [
    {name = "Netherlands Forensics Institute", email = "netherlandsforensicinstitute@users.noreply.github.com"}, ]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache Software License 2.0"}
dependencies = [
    "confidence>=0.17.1",
    "matplotlib>=3.5",
    "numpy>2",
    "scikit-learn>=1.2",
    "tqdm>=4.67.1",
    "optuna>=4.4.0",
    "scipy>=1.13.1",
    "KDEpy>=1.1.12",
    "pydantic>=2.12.3",
    "types-requests>=2.32.4.20250913",
    "requests-cache>=1.2.1",
    "requests>=2.32.5",
]

[project.urls]
homepage = "https://github.com/NetherlandsForensicInstitute/lir/"

[project.scripts]
lir = "lir.main:main"

[dependency-groups]
dev = [
    "coverage",
    "pytest",
    "pytest-testmon>=2.1.3",
    "mypy>=1.18.2",
    "ruff>=0.14.3",
    "mkdocs>=1.6.1",
    "scipy-stubs>=1.17.0.0",
    "sphinx>=9.0.4",
    "sphinx-rtd-theme>=3.1.0",
]

[tool.pdm]
version = {source = "scm"}

[tool.pdm.scripts]
all = {composite = ["check", "test"]}
all_with_quicktest = {composite = ["check", "quicktest"]}
check = {composite = ["format-check", "lint", "mypy"]}
fix-all = {composite = ["lint-fix", "format-fix"]}
lint = "ruff check lir tests"
lint-fix = "ruff check --fix lir tests"
format-check = "ruff format --diff lir tests"
format-fix = "ruff format lir tests"
mypy = "mypy lir"
# If no args are given to 'test', this will run as if '{args}' is an empty string.
test = "coverage run --branch --source lir --module pytest --strict-markers tests/ {args}"
quicktest = {composite = ["test --testmon"]}
test-coverage = "coverage report"
lir = "python run.py"

[tool.ruff]
format.quote-style = "single"
line-length = 120
lint.flake8-builtins.ignorelist = ["format"]
lint.flake8-quotes.inline-quotes = "single"
lint.ignore = [
    # enforced by the formatter, not ignoring this causes warnings
    "COM812",
    # 'r' is the default mode for builtin open(), but explicit is better than implicit
    "UP015",
    # `X` as variable name is allowed to be uppercase in this project
    "N802", "N803", "N806",
    # allow `open()` over `Path.open()`
    "PTH123",
    # allow raising custom Exceptions in try/catch blocks
    "B904",
    # do not enforce use of all() inside `for()` loop
    "SIM110",
]
lint.isort.lines-after-imports = 2
lint.select = ["A", "B", "COM", "C4", "DTZ", "E", "F", "I", "N", "PTH", "Q", "SIM", "UP"]

[tool.mypy]
# allow redefinition of inferred / assigned types
allow_redefinition = true
# require all defined functions to be fully typed
allow_incomplete_defs = false
allow_untyped_defs = false
# be strict about optional types
strict_optional = true
# warn about lines in this file that make no sense to mypy
warn_unused_configs = true
# do not warn about missing imports
ignore_missing_imports = true

exclude = [
    "lir/lrsystems/two_level.py",  # imported from LIR
    "lir/plotting/__init__.py",  # imported from LIR
    "lir/transform/pairing.py",  # imported from LIR
]
